# shadow-cauldron

./: .env.example  .gitignore  .mcp.json  AGENTS.md  CLAUDE.md  GEMINI.md  Makefile  README.md  alembic.ini  pyproject.toml  ruff.toml  shadow_cauldron.db
.ai/docs/: ai-context.md
.claude/: settings.json
.claude/agents/: analysis-expert.md  architecture-reviewer.md  bug-hunter.md  integration-specialist.md  modular-builder.md  refactor-architect.md  subagent-architect.md  synthesis-master.md  tension-keeper.md  test-coverage.md  triage-specialist.md  uncertainty-navigator.md  visualization-architect.md  zen-code-architect.md
.claude/commands/: execute-plan.md  prime.md  review-changes.md  review-code-at-path.md
.claude/tools/: make-check.sh  subagent-logger.py
.gemini/: settings.json
.gemini/commands/: create-plan.toml  execute-plan.toml  prime.toml  review-changes.toml  review-code-at-path.toml  test-webapp-ui.toml  ultrathink-task.toml
ai_context/claude_code/: CLAUDE_CODE_COMMON_WORKFLOWS.md  CLAUDE_CODE_SDK.md  CLAUDE_CODE_SETTINGS.md  CLAUDE_CODE_SLASH_COMMANDS.md
ai_context/git_collector/: CLAUDE_CODE_SDK_PYTHON.md
ai_working/: IMPLEMENTATION_PLAN.md  PHASE_1_COMPLETED.md
alembic/: env.py
alembic/versions/: 20250824_1802_27bebd8ebec0_initial_migration_with_user_model.py
app/: __init__.py  main.py
app/api/: __init__.py  routes.py
app/config/: __init__.py  settings.py
app/core/: __init__.py  auth.py  logging.py  middleware.py
app/experiments/: __init__.py  engine.py  models.py
app/models/: __init__.py  (+2 more)
tests/: __init__.py  conftest.py  test_main.py
tools/: build_ai_context_files.py  build_git_collector_files.py  collect_files.py  create_worktree.py  list_by_filesize.py
(+5 files in other folders)
